# nodeglass

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: default_ontology.yaml
examples/: harden_workflow.py  runtime_instrumentation.py  score_swarm.py  simple_workflow.py
examples/sample_workflows/: autonomous_swarm.yaml  cicd_deploy.yaml  content_moderation.yaml  db_migration.yaml  etl_pipeline.yaml  incident_response.yaml  infra_teardown.yaml  moderate_api_chain.json  moderate_api_chain.yaml  payment_processing.yaml  rag_pipeline.yaml  research_assistant.yaml  risky_delete_cascade.yaml  safe_read_pipeline.yaml  scheduled_report.yaml  social_media_bot.yaml  user_onboarding.yaml
scripts/: claude_hook.py  dag_render.py  inspect_session.py
src/workflow_eval/: __init__.py  cli.py  types.py
tests/: test_api.py  test_cli.py  test_dag_builder.py  test_dag_models.py  test_dag_render.py  test_dag_schema.py  test_dag_validation.py  test_example_workflows.py  test_inspect_session.py  test_instrumentation.py  test_integration.py  test_mcp_tools.py  test_mitigation.py  test_mitigation_engine.py  test_mitigation_strategies.py  test_ontology.py  test_ontology_yaml.py  test_outcome_recorder.py  test_scoring.py  test_scoring_centrality.py  test_scoring_chain_depth.py  test_scoring_compositional.py  test_scoring_engine.py  test_scoring_fan_out.py  test_scoring_irreversibility.py  test_scoring_protocol.py  test_scoring_spectral.py  test_similarity.py  test_storage.py  test_storage_migrations.py  test_storage_repository.py  test_track_operation.py  test_workflow_context.py
(+39 files in other folders)
