[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workflow-eval"
version = "0.1.0"
description = "Geometric eval framework for AI agent workflow risk analysis"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "networkx>=3.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
api = ["fastapi>=0.100", "uvicorn[standard]>=0.20"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.5",
]
all = ["workflow-eval[mcp,api,dev]"]

[project.scripts]
workflow-eval = "workflow_eval.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
